[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/theme/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/UserInterface/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://src/Options/Options.tscn" type="PackedScene" id=3]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.211765 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -125.0
margin_right = 87.0
margin_bottom = 126.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 174.0
margin_bottom = 69.0
text = "Game Paused"
align = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_top = 73.0
margin_right = 174.0
margin_bottom = 113.0
rect_min_size = Vector2( 0, 40 )
text = "Resume"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 117.0
margin_right = 174.0
margin_bottom = 157.0
rect_min_size = Vector2( 0, 40 )
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 161.0
margin_right = 174.0
margin_bottom = 201.0
rect_min_size = Vector2( 0, 40 )
text = "Quit"

[node name="Options" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 0.0
margin_top = 0.0
[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="Options" method="show"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
